@@ -1,4 +1,5 @@
 0.07
+ - API change: Add 'collective' parameter to ISBN.
  - API change: Add 'precision' parameter to PublicationDate.
 
 0.06 2024-07-08T17:33:38+02:00
